--- a/frontend/starter-template.css
+++ b/frontend/starter-template.css
@@ -15,15 +15,93 @@ body {
   font-family: "Calibri", "Roboto", sans-serif;
 }
 
+.bio_window {
+  width: calc(100% - 20px);
+  margin: 20px auto;
+  max-width: 800px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  background-color: #f8f8f8;
+  overflow: hidden;
+}
+
+.container {
+  width: 80%;
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.profile-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.profile-info {
+  padding: 20px;
+}
+
+.profile-name {
+  font-size: 32px;
+  font-weight: bold;
+  color: #333333;
+}
+
+.profile-planet {
+  font-size: 24px;
+  color: #333333;
+}
+
+.profile-age {
+  font-size: 24px;
+  color: #999999;
+}
+
+.profile-bio {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #333333;
+  line-height: 1.5;
+  overflow: auto;
+}
+
+.profile-interests {
+  margin-top: 10px;
+}
+
+.profile-interests h3 {
+  font-size: 20px;
+  color: #333333;
+}
+
+.profile-interests ul {
+  list-style-type: none;
+}
+
+.profile-interests li {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 5px 10px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #333333;
+}
+
 .chat_window {
   position: absolute;
   width: calc(100% - 20px);
   max-width: 800px;
-  height: 500px;
+  height: 200px;
   border-radius: 10px;
   background-color: #fff;
   left: 50%;
-  top: 50%;
+  top: 80%;
   transform: translateX(-50%) translateY(-50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   background-color: #f8f8f8;
