--- a/dating-profile/templates/starter-template.css
+++ b/dating-profile/templates/starter-template.css
@@ -17,6 +17,7 @@ body {
 
 .bio_window {
   width: calc(100% - 20px);
+  height: auto;
   margin: 20px auto;
   max-width: 800px;
   border-radius: 10px;
@@ -38,7 +39,9 @@ body {
 
 .profile-image {
   width: 100%;
-  height: 300px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   object-fit: cover;
 }
 
@@ -101,7 +104,7 @@ body {
   border-radius: 10px;
   background-color: #fff;
   left: 50%;
-  top: 80%;
+  top: 90%;
   transform: translateX(-50%) translateY(-50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   background-color: #f8f8f8;
