--- a/dating-profile/static/css/starter-template.css
+++ b/dating-profile/static/css/starter-template.css
@@ -108,7 +108,7 @@ body {
   transform: translateX(-50%) translateY(-50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   background-color: #f8f8f8;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .top_menu {
