fix for chat scrolling

--- a/dating-profile/static/css/starter-template.css
+++ b/dating-profile/static/css/starter-template.css
@@ -108,7 +108,7 @@ body {
   transform: translateX(-50%) translateY(-50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   background-color: #f8f8f8;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .top_menu {
@@ -150,7 +150,7 @@ body {
   padding: 20px 10px 0 10px;
   margin: 0;
   height: 347px;
-  overflow: scroll;
+  overflow: auto;
 }
 .messages .message {
   clear: both;
