--- a/dating-profile/templates/index.html
+++ b/dating-profile/templates/index.html
@@ -56,11 +56,12 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
+
 <div class="chat_window">
     <ul class="messages"></ul>
     <div class="bottom_wrapper clearfix">
         <div class="message_input_wrapper">
-            <input class="message_input" name="response" placeholder="Type your message here..." />
+            <input class="message_input" placeholder="Type your message here..." />
         </div>
         <div class="send_message">
             <div class="icon"></div>
@@ -77,68 +78,71 @@
     </li>
 </div>
 
-
 <script>
     (function () {
-var Message;
-Message = function (arg) {
-    this.text = arg.text, this.message_side = arg.message_side;
-    this.draw = function (_this) {
-        return function () {
-            var $message;
-            $message = $($('.message_template').clone().html());
-            $message.addClass(_this.message_side).find('.text').html(_this.text);
-            $('.messages').append($message);
-            return setTimeout(function () {
-                return $message.addClass('appeared');
-            }, 0);
+        var Message;
+        Message = function (arg) {
+            this.text = arg.text, this.message_side = arg.message_side;
+            this.draw = function (_this) {
+                return function () {
+                    var $message;
+                    $message = $($('.message_template').clone().html());
+                    $message.addClass(_this.message_side).find('.text').html(_this.text);
+                    $('.messages').append($message);
+                    return setTimeout(function () {
+                        return $message.addClass('appeared');
+                    }, 0);
+                };
+            }(this);
+            return this;
         };
-    }(this);
-    return this;
-};
-$(function () {
-    var getMessageText, message_side, sendMessage;
-    message_side = 'right';
-    getMessageText = function () {
-        var $message_input;
-        $message_input = $('.message_input');
-        return $message_input.val();
-    };
-    sendMessage = function (text) {
-        var $messages, message;
-        if (text.trim() === '') {
-            return;
-        }
-        $('.message_input').val('');
-        $messages = $('.messages');
-        message_side = message_side === 'left' ? 'right' : 'left';
-        message = new Message({
-            text: text,
-            message_side: message_side
+        $(function () {
+            var getMessageText, message_side, sendMessage;
+            message_side = 'right';
+            getMessageText = function () {
+                return $('.message_input').val();
+            };
+            sendMessage = function (text) {
+                if (text.trim() === '') {
+                    return;
+                }
+                $('.message_input').val('');
+                message = new Message({
+                    text: text,
+                    message_side: message_side
+                });
+                $.ajax({
+                    url: '/process',
+                    type: 'POST',
+                    contentType: 'application/json',  // Added this line to specify JSON content
+                    data: JSON.stringify({ 'text': text }),  // Send data as JSON
+                    dataType: 'json',  // We expect to receive JSON from the server
+                    success: function(response) {
+                        // Create a message object with the response and display it
+                        var returnedMessage = new Message({
+                            text: response.response,
+                            message_side: 'left'
+                        });
+                        returnedMessage.draw();
+                    },
+                    error: function(error) {
+                        console.log(error);
+                    }
+                });
+                message.draw();
+                $('.messages').animate({ scrollTop: $('.messages').prop('scrollHeight') }, 300);
+            };
+            $('.send_message').click(function (e) {
+                return sendMessage(getMessageText());
+            });
+            $('.message_input').keyup(function (e) {
+                if (e.which === 13) {
+                    return sendMessage(getMessageText());
+                }
+            });
         });
-        $.ajax({ 
-            url: '/process', 
-            type: 'POST', 
-            data: { 'data': message }, 
-            success: function(response) { 
-                document.getElementById('output').innerHTML = response; 
-            }, 
-            error: function(error) { 
-                console.log(error); 
-            }
-        });
-        message.draw();
-        return $messages.animate({ scrollTop: $messages.prop('scrollHeight') }, 300);
-    };
-    $('.send_message').click(function (e) {
-        return sendMessage(getMessageText());
-    });
-    $('.message_input').keyup(function (e) {
-        if (e.which === 13) {
-            return sendMessage(getMessageText());
-        }
-    });
-});
-}.call(this));
+    }.call(this));
 </script>
+</body>
 </html>
+
