--- a/dating-profile/static/css/starter-template.css
+++ b/dating-profile/static/css/starter-template.css
@@ -1,6 +1,15 @@
 body {
-  padding-top: 5rem;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  padding-top: 2rem;
 }
+
+* {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+}
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
@@ -17,7 +26,6 @@ body {
 
 .bio_window {
   width: calc(100% - 20px);
-  height: auto;
   margin: 20px auto;
   max-width: 800px;
   border-radius: 10px;
@@ -100,12 +108,12 @@ body {
   position: absolute;
   width: calc(100% - 20px);
   max-width: 800px;
-  height: 200px;
+  height: 400px;
   border-radius: 10px;
   background-color: #fff;
   left: 50%;
   top: 90%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-80%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   background-color: #f8f8f8;
   overflow: hidden;
@@ -147,7 +155,7 @@ body {
 .messages {
   position: relative;
   list-style: none;
-  padding: 20px 10px 0 10px;
+  padding: 20px 10px 40px 10px;
   margin: 0;
   height: 347px;
   overflow: auto;
