--- a/dating-profile/templates/index.html
+++ b/dating-profile/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>I<3Aliens.com</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -21,13 +21,36 @@
 </head>
 
 <body>
+    <!--
 <div class="bio_window">
-    <img src="{{ url_for('static', filename=profile['img']) }}" alt="Profile IMG" class="profile-image">
     <div class="profile-info">
+        <img src="{{ url_for('static', filename=profile['img']) }}" alt="Profile IMG" class="profile-image">
         <div class="profile-name">{{ profile['name'] }}</div>
         <div class="profile-planet">{{ profile['planet'] }}</div>
         <div class="profile-age">{{ profile['age'] }}</div>
         <div class="profile-bio">{{ profile['bio'] }}</div>
+        <div class="profile-interests">
+            <h3>Interests</h3>
+            <ul>
+                {% for interest in profile['interests'] %}
+                <li>{{ interest }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
+    -->
+<div class="bio_window">
+    <div class="profile-container">
+        <div class="profile-info">
+            <div class="profile-text">
+                <div class="profile-name">{{ profile['name'] }}</div>
+                <div class="profile-planet">Planet: {{ profile['planet'] }}</div>
+                <div class="profile-age">Age: {{ profile['age'] }}</div>
+                <div class="profile-bio">{{ profile['bio'] }}</div>
+            </div>
+            <img src="{{ url_for('static', filename=profile['img']) }}" alt="Profile IMG" class="profile-image">
+        </div>
         <div class="profile-interests">
             <h3>Interests</h3>
             <ul>
@@ -57,9 +80,13 @@
         </div>
     </div>
 </div>
+
 <div class="message_template">
     <li class="message">
-        <div class="avatar"></div>
+        <div class="avatar">
+            <img src="{{ url_for('static', filename=profile['img']) }}" alt="Avatar Image" class="avatar-img">
+        </div>
+
         <div class="text_wrapper">
             <div class="text"></div>
         </div>
@@ -78,6 +105,12 @@
                     var $message;
                     $message = $($('.message_template').clone().html());
                     $message.addClass(_this.message_side).find('.text').html(_this.text);
+                    if (this.message_side == "right"){
+                        $message.addClass(_this.message_side).find('.avatar').html('<img src="/static/img/avatar-person.jpg" alt="Avatar Image" class="avatar-img">');
+                    } else {
+                        var avatarImg = "{{ url_for('static', filename=profile['img']) }}";
+                        $message.addClass(_this.message_side).find('.avatar').html('<img src='+avatarImg+' alt="Avatar Image" class="avatar-img">');
+                    }
                     $('.messages').append($message);
                     return setTimeout(function () {
                         return $message.addClass('appeared');
