modal should work now? also the accept or reject is determined only on the last message

--- a/dating-profile/templates/index.html
+++ b/dating-profile/templates/index.html
@@ -95,7 +95,7 @@
 
 <div id="popupModal" class="modal">
     <div class="modal-content">
-        <p>Chat ended. You have exceeded the chat tolerance.</p>
+        <p>Congratulations, you intergalactic rizzler! Enjoy your free drink!</p>
         <button id="refreshButton">Receive my Gift from the Sphincter</button>
     </div>
 </div>
