--- a/dating-profile/static/css/starter-template.css
+++ b/dating-profile/static/css/starter-template.css
@@ -364,9 +364,9 @@ body {
 }
 
 .modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
   transform: translate(-50%, -50%);
   padding: 20px;
   background-color: #fff;
