all the stuff updated during 99f

--- a/dating-profile/templates/index.html
+++ b/dating-profile/templates/index.html
@@ -95,8 +95,9 @@
 
 <div id="popupAcceptModal" class="modal">
     <div class="modal-content">
-        <p>Congratulations, you intergalactic rizzler! Enjoy your free drink! Be patient while the Sphincter excretes your Gift...</p>
-        <button id="refreshButtonAccept">Click Me When Done</button>
+        <p>LOOK BELOW THE TABLE to FONDLE my intergalactic teledildonic SPHINCTER as I print you out a free drink receipt... cuz I wanna get to know you. Don't pull too hard on my receipt until it's out ALL the way ;)</p>
+        <p>(i.e. pls dont rip the receipt before it is *completely* done printing)</p>
+        <button id="refreshButtonAccept">Click Me When Done Printing</button>
     </div>
 </div>
 
@@ -181,9 +182,9 @@
                             // Show the modal
                             // wait 2 seconds before showModal
                             if (response.rejected) {
-                                setTimeout(showRejectModal, 2000);
+                                setTimeout(showRejectModal, 500);
                             } else {
-                            setTimeout(showAcceptModal, 2000);
+                            setTimeout(showAcceptModal, 500);
                         }
                             
                             // Add a click event listener to the "Receive my Gift from the Sphincter" button
