--- a/dating-profile/static/css/starter-template.css
+++ b/dating-profile/static/css/starter-template.css
@@ -360,7 +360,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5)!important;
 }
 
 .modal-content {
@@ -369,7 +369,7 @@ body {
   left: 50% !important;
   transform: translate(-50%, -50%);
   padding: 20px;
-  background-color: #fff;
+  background-color: #fff !important;
   border-radius: 5px;
   text-align: center;
 }
