final tweaks for presentation

--- a/dating-profile/templates/index.html
+++ b/dating-profile/templates/index.html
@@ -95,8 +95,7 @@
 
 <div id="popupAcceptModal" class="modal">
     <div class="modal-content">
-        <p>LOOK BELOW THE TABLE to FONDLE my intergalactic teledildonic SPHINCTER as I print you out a free drink receipt... cuz I wanna get to know you. Don't pull too hard on my receipt until it's out ALL the way ;)</p>
-        <p>(i.e. pls dont rip the receipt before it is *completely* done printing)</p>
+        <p><font size="24">Please FONDLE my intergalactic teledildonic SPHINCTER as I print you out a free drink receipt... cuz I wanna take you out.</font></p>
         <button id="refreshButtonAccept">Click Me When Done Printing</button>
     </div>
 </div>
